Added skeleton of brand_detail.html and URL map and view. Need to access brand info and print car models for that brand.

--- a/car_app/cars_and_brands/templates/cars_and_brands/brand_detail.html
+++ b/car_app/cars_and_brands/templates/cars_and_brands/brand_detail.html
@@ -1,12 +1,10 @@
 {% load static %}
-<h1>Brands:</h1>
+<h1>{{brand_info}}</h1>
 <ul>
-{% for brand in brands %}
+{% for key in brand_info.keys %}
     
         <li>
-            <a href="{{brand.id}}">
-            {{brand.make}}
-            </a>
+            {{key}}
         </li>
     
 {% endfor %}
